--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.9",
     "twit": "^2.2.11",
     "typescript": "^4.6.2",
     "util": "^0.12.4",
