--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
     "moment": "^2.29.1",
+    "plotly.js": "^2.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loading-skeleton": "^3.0.3",
+    "react-plotly.js": "^2.5.1",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.9",
     "twit": "^2.2.11",
@@ -52,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-plotly.js": "^2.5.0",
     "@types/twit": "^2.2.30",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.8",
