--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "plotly.js": "^2.11.1",
     "react": "^17.0.2",
+    "react-countup": "^6.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.3",
